Fixed Scrollbar Issue in Alternative Pages

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,3 @@
-html {
-  overflow-y: scroll;
-  /* scrollbar-width: none;  For Firefox */
-}
-
-html::-webkit-scrollbar {
-  /* display: none; For Chrome, Safari, and Opera */
-}
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,7 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f5f5f5;
 }
 
 code {
